0.2.6 (?/??/2012):
------------------

- Fixed bug in 0.2.5 that caused failure of Linux initial RAM disk
  mapping on some (but not all) systems. Affected computers include at
  least some Intel motherboards, maybe others.

0.2.5 (4/9/2012):
-----------------

- Fixed bug that caused an inability to associate initial RAM disks with
  Linux kernels stored in a volume's root directory.

- Volume badges (that override default badges) are now stored in
  .VolumeBadge.icns. Although undocumented, rEFInd formerly loaded custom
  volume badges from .VolumeIcon.icns. This carryover from rEFIt was a
  confusing name, given the next (new) feature, so I've changed and
  documented the name....

- Added ability to set a default icon for a loader stored in the root
  directory of a volume: The icon is stored in .VolumeIcon.icns. This icon
  is also used for Mac OS X volumes booted from the standard location.

- Fixed bug that caused icons to drop back to generic icons when rEFInd
  was launched in certain ways (such as from an EFI shell in rEFInd's
  directory) on certain systems.

- Fixed bug that caused "unknown disable flag" to be shown (very briefly)
  instead of "unknown hideui flag" when an improper hideui flag was set.

0.2.4 (4/5/2012):
-----------------

- Created new refind.conf entry: "showtools". This entry takes options of
  "shell", "gptsync", "about", "exit", "reboot", and "shutdown". This
  option is in some respects an affirmative version of portions of the old
  "disable" and "hideui" options; however, it enables users to specify the
  order in which these options appear on the screen. Also, the "exit"
  option is new; it terminates the program. The effect is usually to return
  to whatever tool launched it or to launch a default OS; however, this is
  somewhat unpredictable. The default therefore omits the "exit" option, as
  well as "gptsync", which has always been dangerous (but necessary on most